--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,13 +1,9 @@
-buildscript {
-    ext {
-        // Define the Android Gradle Plugin version here
-        agpVersion = '8.1.0'
-    }
-}
+// Remove the buildscript block as it's not needed here
+// Kotlin plugin is applied in the root project
 
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android' version '1.8.20' // Add Kotlin plugin
+    id 'org.jetbrains.kotlin.android' apply false // Apply false here, will be applied in subprojects
 }
 
 android {
