--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,27 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
-    ext {
-        // Update these versions as needed
-        kotlin_version = '1.8.20'
-        agp_version = '8.13.1'
-    }
-    
-    repositories {
-        google()
-        mavenCentral()
-        gradlePluginPortal()
-    }
-    
-    dependencies {
-        classpath "com.android.tools.build:gradle:$agp_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.4.2'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+plugins {
+    id 'com.android.application' version '8.1.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
+
+// Apply variables.gradle before other configurations
+apply from: "variables.gradle"
 
 // Apply variables.gradle before other configurations
 apply from: "variables.gradle"
